--- a/package.json
+++ b/package.json
@@ -4,16 +4,26 @@
   "description": "The Astronaut Router Module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node node_modules/mocha/bin/mocha --compilers coffee:coffee-script/register",
+    "test:dev": "node node_modules/mocha/bin/mocha --watch --compilers coffee:coffee-script/register",
+    "build": "node node_modules/coffee-script/bin/coffee --compile src/*.coffee --output bin/",
+    "build:dev": "node node_modules/coffee-script/bin/coffee --watch --compile src/*.coffee --output bin/"
   },
   "keywords": [
-    "express",
-    "body-parser"
+    "astronautjs",
+    "router",
+    "rest",
+    "mvc"
   ],
   "author": "Guilherme Diego",
   "license": "MIT",
   "files": [
     "index.js",
     "bin/"
-  ]
+  ],
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "coffee-script": "^1.10.0",
+    "mocha": "^2.4.5"
+  }
 }
