--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "The Astronaut Router Module",
   "main": "index.js",
   "scripts": {
-    "test": "node node_modules/mocha/bin/mocha --compilers coffee:coffee-script/register",
-    "test:dev": "node node_modules/mocha/bin/mocha --watch --compilers coffee:coffee-script/register",
+    "test": "node node_modules/mocha/bin/mocha --require coffee-coverage/register --recursive __test__ --compilers coffee:coffee-script/register -R html-cov --bail __test__/ > coverage/index.html",
+    "test:dev": "node node_modules/mocha/bin/mocha --watch --compilers coffee:coffee-script/register --recursive __test__",
+    "test:lcov": "node node_modules/istanbul/lib/cli cover node_modules/mocha/bin/_mocha -- --recursive __test__ --compilers coffee:coffee-script/register --require coffee-coverage/register __test__",
     "build": "node node_modules/coffee-script/bin/coffee --compile src/*.coffee --output bin/",
-    "build:dev": "node node_modules/coffee-script/bin/coffee --watch --compile src/*.coffee --output bin/"
+    "build:dev" : "node node_modules/coffee-script/bin/coffee --watch --compile src/*.coffee --output bin/",
+    "codeclimate" : "CODECLIMATE_REPO_TOKEN=da78ebce010181d7c55612744d6c79c3a4ed56c0819205e7718c19c3c24f243b && node node_modules/codeclimate-test-reporter/bin/codeclimate-test-reporter < lvoc.info"
   },
   "keywords": [
     "astronautjs",
@@ -23,7 +25,10 @@
   ],
   "devDependencies": {
     "chai": "^3.5.0",
+    "codeclimate-test-reporter": "^0.3.1",
+    "coffee-coverage": "^1.0.1",
     "coffee-script": "^1.10.0",
+    "istanbul": "^0.4.2",
     "mocha": "^2.4.5"
   }
 }
